localization/v2.6.x/site/zh/adminGuide/limit_collection_counts.md
---
id: limit_collection_counts.md
title: 设定收集数量限制
---
<h1 id="Limit-Collection-Counts" class="common-anchor-header">收集数量限制<button data-href="#Limit-Collection-Counts" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Milvus 实例最多允许 65,536 个 Collection。不过，过多的 Collections 可能会导致性能问题。因此，建议限制在 Milvus 实例中创建的 Collection 数量。</p>
<p>本指南说明了如何设置 Milvus 实例中的 Collection 数量限制。</p>
<p>配置因安装 Milvus 实例的方式而异。</p>
<ul>
<li><p>对于使用 Helm Charts 安装的 Milvus 实例</p>
<p>将配置添加到<code translate="no">values.yaml</code> 文件的<code translate="no">config</code> 部分。有关详细信息，请参阅<a href="/docs/zh/configure-helm.md">使用 Helm Charts 配置 Milvus</a>。</p></li>
<li><p>对于使用 Docker Compose 安装的 Milvus 实例</p>
<p>将配置添加到用于启动 Milvus 实例的<code translate="no">milvus.yaml</code> 文件中。有关详细信息，请参阅<a href="/docs/zh/configure-docker.md">使用 Docker Compose 配置 Milvus</a>。</p></li>
<li><p>对于使用 Operator 安装的 Milvus 实例</p>
<p>将配置添加到<code translate="no">Milvus</code> 自定义资源的<code translate="no">spec.components</code> 部分。有关详情，请参阅<a href="/docs/zh/configure_operator.md">使用 Operator 配置 Milvus</a>。</p></li>
</ul>
<h2 id="Configuration-options" class="common-anchor-header">配置选项<button data-href="#Configuration-options" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><pre><code translate="no" class="language-yaml"><span class="hljs-attr">rootCoord:</span>
    <span class="hljs-attr">maxGeneralCapacity:</span> <span class="hljs-number">65536</span>

<span class="hljs-attr">quotaAndLimits:</span>
    <span class="hljs-attr">limits:</span>
        <span class="hljs-attr">maxCollectionNum:</span> <span class="hljs-number">65536</span>
        <span class="hljs-attr">maxCollectionNumPerDB:</span> <span class="hljs-number">65536</span>
<button class="copy-code-btn"></button></code></pre>
<p>要更改 Collections 限制，需要将三个参数一起修改：</p>
<table>
<thead>
<tr><th>参数</th><th>参数</th><th>默认值</th></tr>
</thead>
<tbody>
<tr><td><code translate="no">rootCoord.maxGeneralCapacity</code></td><td>当前实例可容纳的最大集合单元数（分片×分区）。</td><td><code translate="no">65536</code></td></tr>
<tr><td><code translate="no">quotaAndLimits.limits.maxCollectionNum</code></td><td>当前实例中所有数据库允许的最大集合数。</td><td><code translate="no">65536</code></td></tr>
<tr><td><code translate="no">quotaAndLimits.limits.maxCollectionNumPerDB</code></td><td>单个数据库中允许的最大集合数。</td><td><code translate="no">65536</code></td></tr>
</tbody>
</table>
<p>例如，将限制增加到 200,000 个 Collections：</p>
<pre><code translate="no" class="language-yaml"><span class="hljs-attr">rootCoord:</span>
    <span class="hljs-attr">maxGeneralCapacity:</span> <span class="hljs-number">200000</span>

<span class="hljs-attr">quotaAndLimits:</span>
    <span class="hljs-attr">limits:</span>
        <span class="hljs-attr">maxCollectionNum:</span> <span class="hljs-number">200000</span>
        <span class="hljs-attr">maxCollectionNumPerDB:</span> <span class="hljs-number">200000</span>
<button class="copy-code-btn"></button></code></pre>
<div class="alert note">
<p>只设置<code translate="no">maxGeneralCapacity</code> 而不同时调整<code translate="no">maxCollectionNum</code> 和<code translate="no">maxCollectionNumPerDB</code> 将不会生效。必须将所有三个参数设置为相同值或更高，才能提高 Collections 限制。</p>
</div>
<h2 id="Calculating-the-number-of-collections" class="common-anchor-header">计算 Collection 数量<button data-href="#Calculating-the-number-of-collections" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p>在一个 Collections 中，可以设置多个分片和分区。分片是用于在多个数据节点之间分配数据写入操作的逻辑单元。分区是逻辑单元，用于通过只加载 Collections 数据的子集来提高数据检索效率。在计算当前 Milvus 实例中的 Collections 数量时，还需要计算分片和分区的数量。</p>
<p>例如，假设您已经创建了<strong>100 个</strong>Collection，其中<strong>60 个</strong>Collection 有<strong>2</strong>个分块和<strong>4 个</strong>分区，其余<strong>40 个</strong>Collection 有<strong>1 个</strong>分块和<strong>12 个</strong>分区。收集单元总数（计算公式为<code translate="no">shards × partitions</code> ）可按如下方式确定：</p>
<pre><code translate="no">60 (collections) x 2 (shards) x 4 (partitions) + 40 (collections) x 1 (shard) x 12 (partitions) = 960
<button class="copy-code-btn"></button></code></pre>
<p>在本例中，计算出的 960 个 Collections 单元总数代表了当前的使用情况。<code translate="no">maxGeneralCapacity</code> 定义了实例可支持的最大 Collections 单位数，默认设置为<code translate="no">65536</code> 。这意味着实例最多可容纳 65,536 个 Collections 单元。如果总数超过此限制，系统将显示以下错误信息：</p>
<pre><code translate="no" class="language-shell">failed checking constraint: sum_collections(parition*shard) exceeding the max general capacity:
<button class="copy-code-btn"></button></code></pre>
<p>为避免出现此错误，可以减少现有或新收集中的分片或分区数量，删除某些收集，或通过同时修改<code translate="no">maxGeneralCapacity</code> 、<code translate="no">maxCollectionNum</code> 和<code translate="no">maxCollectionNumPerDB</code> 来增加收集限制。</p>
